fix: aligns padding and font sizes on nav-link and page title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,9 +165,10 @@ section {
 h2 {
     text-transform: uppercase;
     font-size: 2rem;
+    letter-spacing:3px;
     margin:0;
     display:block;
-    padding:0 10px;
+    padding:0 16px;
     text-align: right;
 }
 
